Modify text and configuration in index.html
Updated text content and adjusted configuration parameters for better performance.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div id="loading">Đang chuẩn bị quà...</div>
     
     <div id="portrait-warning">
-        <h2>Heluuuu!</h2>
-        <p>XOAY NGANG ĐIỆN THOẠI ĐỂ XEM NHÉ ❤️</p>
+        <h2>Heluuu cục dàng</h2>
+        <p>XOAY NGANG ĐIỆN THOẠI ĐỂ COI NHOOOOO ❤️</p>
     </div>
 
     <canvas id="myCanvas"></canvas>
@@ -87,16 +87,17 @@
             "Tặng cục dàng yêu",
             "Thêm tí màu mè này",
             "Rằng là:",
-            "Chúc cục dàng, em bé,\nvợ của tui ngày nàoooo\ncũng cười tươi",
+            "Chúc "cục dàng", "em bé",\n"vợ" của tui là ntham á\n ngày nàoooooooo\ncũng cười tươi",
             "hạnh phúc quài quài\nmãi mãi lun",
-            "Yêu em ❤️"
+            "Mình cùng nhau đi chung quài lun nghe",
+            "Yêu em nhìuuuuuu❤️"
         ];
 
         // CẤU HÌNH ĐÃ TỐI ƯU CHO ĐỘ SẮC NÉT
         const CONFIG = {
-            step: 2,         // Giảm khoảng cách quét (cũ: 3) -> Dày hạt hơn
-            baseSize: 2,     // Kích thước hạt (bằng step để không có khe hở)
-            speed: 0.09,     
+            step: 7,         // Giảm khoảng cách quét (cũ: 3) -> Dày hạt hơn
+            baseSize: 3,     // Kích thước hạt (bằng step để không có khe hở)
+            speed: 0.03,     
             snapDistance: 1.5 // Tăng nhẹ khoảng cách hút để chữ vào form nhanh hơn
         };
 
