Update messages and configuration values in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             "Tặng cục dàng yêu",
             "Thêm tí màu mè này",
             "Rằng là:",
-            "Chúc cục dàng, em bé,\nvợ của tui là ntham á\n ngày nàoooooooo\ncũng cười tươi",
+            "Chúc em bé của tui\n ngày nàoooooooo cũng cười tươi",
             "hạnh phúc quài quài\nmãi mãi lun",
             "Mình cùng nhau đi chung quài lun nghe",
             "Yêu em nhìuuuuuu❤️"
@@ -95,8 +95,8 @@
 
         // CẤU HÌNH ĐÃ TỐI ƯU CHO ĐỘ SẮC NÉT
         const CONFIG = {
-            step: 1,         // Giảm khoảng cách quét (cũ: 3) -> Dày hạt hơn
-            baseSize: 3,     // Kích thước hạt (bằng step để không có khe hở)
+            step: 2,         // Giảm khoảng cách quét (cũ: 3) -> Dày hạt hơn
+            baseSize: 2,     // Kích thước hạt (bằng step để không có khe hở)
             speed: 0.05,     
             snapDistance: 1.5 // Tăng nhẹ khoảng cách hút để chữ vào form nhanh hơn
         };
